# bora-contratar

./: .env  .gitignore  LICENSE  README.md  apagar_dados.py  app.py  pyproject.toml  tela_teste.py
.streamlit/: config.toml
ai/: Untitled-1.json  agente_avaliar_cv.py  prompt_avaliar_cv.py
api/: app.py
api/templates/: index.html
database/: criar_tabelas.py
pages/: avaliar_curriculos.py  cadastro_vagas.py  concorrer_vaga.py
services/: extarir_texto.py  obter_dados_vaga.py
