[project]
name = "bora-contratar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.5",
    "openai>=2.24.0",
    "pymupdf>=1.27.1",
    "streamlit[pdf]>=1.54.0",
    "streamlit-pdf==2.0.1",
    "streamlit-pdf-viewer>=0.0.27",
    "flask>=3.1.3",
]
